--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  /* background-image: url('https://www.infobae.com/new-resizer/x_eJjdt4r-8hfKf68aRXzXDZlN8=/992x558/filters:format(webp):quality(85)/arc-anglerfish-arc2-prod-infobae.s3.amazonaws.com/public/MCSYRT2P7BCKDI3LOGL7KNJCQM'); */
+  /* background-image: url('https://statics.forbesargentina.com/2022/03/crop/62309307f2750__822x460.webp'); */
+  background-image: url('https://www.ngenespanol.com/wp-content/uploads/2018/08/7-buenas-razones-para-tomar-cerveza.png');
+  background-repeat:repeat;
+  background-size:cover;
+  background-position: center;
+}
+ol, ul {
+  padding-left: 0;
+}
+p{
+  border: 1px solid black;
+  width: 5rem;
+  color: red;
+}
+.a {
+  background-color: rgba(199, 194, 184, 0.4) !important;
+  margin-bottom: .5rem;
+}
+/* .main {
+  background-color: rgba(213, 200, 172, 0.8);
+  border-radius: 10px;
+  margin-top: 1rem;
+} */
+.card {
+  background-color: rgba(199, 175, 121, 0.8) !important;
+  border-radius: 10px;
+  margin-top: 1rem;
+}
+
+.label {
+  width: 20rem;
+  height: 4rem;
+  border-radius: 5px;
+  border: solid 1px black;
+
+}
+.font_family{
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+font-style: normal !important
+}
