--- a/src/app/calcular/calcular.component.html
+++ b/src/app/calcular/calcular.component.html
@@ -45,11 +45,11 @@
               <div class="form-check form-check-inline">
                 <label class="form-check-label fs-6" for="x3_si">Sí</label>
                 <input type="radio" class="form-check-input" id="x3_si" name="x3" [value]="true"
-                  [(ngModel)]="esFinDeSemana" checked />
+                  [(ngModel)]="esFeriado" checked />
               </div>
               <div class="form-check form-check-inline">
                 <input type="radio" class="form-check-input" id="x3_no" name="x3" [value]="false"
-                  [(ngModel)]="esFinDeSemana" />
+                  [(ngModel)]="esFeriado" />
                 <label class="form-check-label fs-6" for="x3_no">No</label>
               </div>
             </div>
